PQL/src-gen/main/java/mil/darpa/immortals/core/das/pql/generated/PQLParser.java
// Generated from PQL.g4 by ANTLR 4.7.1

    package mil.darpa.immortals.core.das.pql.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, RECEIVER=29, ADD_METHOD_INVOCATION=30, 
		ARGUMENTS=31, FIELD_TYPE=32, ADD_GETTER_SETTER=33, FIELD_NAME=34, ADD_GETTER=35, 
		ADD_SETTER=36, GETTER_ACCESS_MODIFIER=37, SETTER_ACCESS_MODIFIER=38, APPLY_TO_ANCESTOR_CLASS=39, 
		INITIALIZER=40, IDEMPOTENT=41, WHEN=42, FRAGMENT=43, THEN=44, STRINGENT=45, 
		LENIENT=46, ORDERED=47, UNORDERED=48, REFERENCE=49, REFERENCE_SEARCH=50, 
		REPLACE=51, ADD_PARAMETERS=52, ADD_METHOD=53, ADD_IMPORTS=54, ADD_FIELDS=55, 
		DESUGAR_METHOD_INVOCATION=56, PRINT_MATCH=57, METHOD_INVOCATION=58, METHOD_DECLARATION=59, 
		CLASS_DECLARATION=60, ACCESS_MODIFIER=61, RECEIVER_TYPE=62, RETURN_TYPE=63, 
		TYPE=64, METHOD_NAME=65, NAME=66, ADD_AFTER_POSITION=67, TARGET_ID=68, 
		PATTERN_CONTEXT=69, ARGUMENT_TYPES=70, PARAMETER_TYPES=71, THROWS_TYPES=72, 
		ID=73, FRAGMENT_SEARCH_POLICY=74, CHILD_SEARCH_POLICY=75, DUPLICATE_POLICY=76, 
		SUPERCLASS_TYPE=77, INTERFACE_TYPES=78, RESTART_AT_HOME=79, RESTART_AT_END_LAST_MATCH=80, 
		EXPRESSION=81, STATEMENT=82, STATIC_MODIFIER=83, FINAL_MODIFIER=84, ABSTRACT_MODIFIER=85, 
		NESTED_CLASS=86, NATIVE_MODIFIER=87, SYNCHRONIZED_MODIFIER=88, HALT_ON_DUPLICATE=89, 
		SEARCH_NEXT_UNIQUE=90, CYCLE_CHILDREN=91, CODE_BLOCK=92, BINDING_REF=93, 
		WS=94, COMMENT=95, LINE_COMMENT=96, BOOL_LITERAL=97, IDENTIFIER=98, INT_LITERAL=99, 
		DECIMAL_LITERAL=100, STRING_LITERAL=101;
	public static final int
		RULE_prog = 0, RULE_rootFragment = 1, RULE_codeOrFragmentPatterns = 2, 
		RULE_fragmentPattern = 3, RULE_codePattern = 4, RULE_methodInvocation = 5, 
		RULE_methodDeclaration = 6, RULE_classDeclaration = 7, RULE_interfaceTypes = 8, 
		RULE_superClassType = 9, RULE_receiverType = 10, RULE_returnType = 11, 
		RULE_methodName = 12, RULE_argumentTypes = 13, RULE_parameterTypes = 14, 
		RULE_throwsTypes = 15, RULE_rootFragmentOptions = 16, RULE_fragmentOptions = 17, 
		RULE_childSearchPolicy = 18, RULE_fragmentSearchPolicy = 19, RULE_duplicatePolicy = 20, 
		RULE_reference = 21, RULE_type = 22, RULE_genericizedType = 23, RULE_referenceSearch = 24, 
		RULE_anchor = 25, RULE_commands = 26, RULE_addMethodInvocation = 27, RULE_addGetterSetter = 28, 
		RULE_addParameters = 29, RULE_replace = 30, RULE_codeBlock = 31, RULE_addMethod = 32, 
		RULE_addImports = 33, RULE_addFields = 34, RULE_desugarMethodInvocation = 35, 
		RULE_printMatch = 36, RULE_fields = 37, RULE_field = 38, RULE_imports = 39, 
		RULE_arguments = 40, RULE_argument = 41, RULE_parameters = 42, RULE_parameter = 43, 
		RULE_parameterPosition = 44, RULE_parameterType = 45, RULE_parameterName = 46, 
		RULE_fieldName = 47, RULE_fieldType = 48, RULE_importType = 49, RULE_idempotent = 50, 
		RULE_accessModifier = 51, RULE_getterAccessModifier = 52, RULE_setterAccessModifier = 53, 
		RULE_scope = 54, RULE_initializer = 55, RULE_receiver = 56, RULE_methodToInvoke = 57, 
		RULE_pqlExpression = 58, RULE_contextReferences = 59, RULE_stringContextReference = 60, 
		RULE_stringArrayContextReference = 61, RULE_nameExpression = 62, RULE_bindingLookup = 63, 
		RULE_lookupIndex = 64, RULE_expression = 65, RULE_expressions = 66, RULE_addGetter = 67, 
		RULE_addSetter = 68, RULE_stringLiteral = 69, RULE_decimalLiteral = 70, 
		RULE_booleanLiteral = 71, RULE_applyToAncestorClass = 72, RULE_staticModifier = 73, 
		RULE_finalModifier = 74, RULE_abstractModifier = 75, RULE_nestedClass = 76, 
		RULE_nativeModifier = 77, RULE_synchronizedModifier = 78, RULE_order = 79, 
		RULE_bindingRef = 80, RULE_bindingDecl = 81, RULE_targetBinding = 82, 
		RULE_searchPolicy = 83, RULE_patternContext = 84;
	public static final String[] ruleNames = {
		"prog", "rootFragment", "codeOrFragmentPatterns", "fragmentPattern", "codePattern", 
		"methodInvocation", "methodDeclaration", "classDeclaration", "interfaceTypes", 
		"superClassType", "receiverType", "returnType", "methodName", "argumentTypes", 
		"parameterTypes", "throwsTypes", "rootFragmentOptions", "fragmentOptions", 
		"childSearchPolicy", "fragmentSearchPolicy", "duplicatePolicy", "reference", 
		"type", "genericizedType", "referenceSearch", "anchor", "commands", "addMethodInvocation", 
		"addGetterSetter", "addParameters", "replace", "codeBlock", "addMethod", 
		"addImports", "addFields", "desugarMethodInvocation", "printMatch", "fields", 
		"field", "imports", "arguments", "argument", "parameters", "parameter", 
		"parameterPosition", "parameterType", "parameterName", "fieldName", "fieldType", 
		"importType", "idempotent", "accessModifier", "getterAccessModifier", 
		"setterAccessModifier", "scope", "initializer", "receiver", "methodToInvoke", 
		"pqlExpression", "contextReferences", "stringContextReference", "stringArrayContextReference", 
		"nameExpression", "bindingLookup", "lookupIndex", "expression", "expressions", 
		"addGetter", "addSetter", "stringLiteral", "decimalLiteral", "booleanLiteral", 
		"applyToAncestorClass", "staticModifier", "finalModifier", "abstractModifier", 
		"nestedClass", "nativeModifier", "synchronizedModifier", "order", "bindingRef", 
		"bindingDecl", "targetBinding", "searchPolicy", "patternContext"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "'('", "':'", "','", "')'", "';'", "'.'", "'<'", "'>'", 
		"'()'", "'*'", "'Public'", "'Private'", "'Protected'", "'PackageLevel'", 
		"'`'", "'Context'", "'getString'", "'getStringArray'", "'['", "']'", "'null'", 
		"'this'", "'-'", "'!'", "'+'", "'=='", "'Receiver'", "'addMethodInvocation'", 
		"'Arguments'", "'FieldType'", "'addGetterSetter'", "'FieldName'", "'AddGetter'", 
		"'AddSetter'", "'GetterAccessModifier'", "'SetterAccessModifier'", "'ApplyToAncestorClass'", 
		"'Initializer'", "'Idempotent'", "'when'", "'fragment'", "'then'", "'stringent'", 
		"'lenient'", "'ordered'", "'unordered'", "'reference'", "'referenceSearch'", 
		"'replace'", "'addParameters'", "'addMethod'", "'addImports'", "'addFields'", 
		"'desugarMethodInvocation'", "'printMatch'", "'methodInvocation'", "'methodDeclaration'", 
		"'classDeclaration'", "'AccessModifier'", "'ReceiverType'", "'ReturnType'", 
		"'Type'", "'MethodName'", "'Name'", "'AddAfterPosition'", "'TargetID'", 
		"'PatternContext'", "'ArgumentTypes'", "'ParameterTypes'", "'ThrowsTypes'", 
		"'ID'", "'FragmentSearchPolicy'", "'ChildSearchPolicy'", "'DuplicatePolicy'", 
		"'SuperClassType'", "'InterfaceTypes'", "'RestartAtHome'", "'RestartAtEndLastMatch'", 
		"'Expression'", "'Statement'", "'StaticModifier'", "'FinalModifier'", 
		"'AbstractModifier'", "'Nested'", "'NativeModifier'", "'SynchronizedModifier'", 
		"'HaltOnDuplicate'", "'SearchNextUnique'", "'CycleChildren'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "RECEIVER", "ADD_METHOD_INVOCATION", "ARGUMENTS", 
		"FIELD_TYPE", "ADD_GETTER_SETTER", "FIELD_NAME", "ADD_GETTER", "ADD_SETTER", 
		"GETTER_ACCESS_MODIFIER", "SETTER_ACCESS_MODIFIER", "APPLY_TO_ANCESTOR_CLASS", 
		"INITIALIZER", "IDEMPOTENT", "WHEN", "FRAGMENT", "THEN", "STRINGENT", 
		"LENIENT", "ORDERED", "UNORDERED", "REFERENCE", "REFERENCE_SEARCH", "REPLACE", 
		"ADD_PARAMETERS", "ADD_METHOD", "ADD_IMPORTS", "ADD_FIELDS", "DESUGAR_METHOD_INVOCATION", 
		"PRINT_MATCH", "METHOD_INVOCATION", "METHOD_DECLARATION", "CLASS_DECLARATION", 
		"ACCESS_MODIFIER", "RECEIVER_TYPE", "RETURN_TYPE", "TYPE", "METHOD_NAME", 
		"NAME", "ADD_AFTER_POSITION", "TARGET_ID", "PATTERN_CONTEXT", "ARGUMENT_TYPES", 
		"PARAMETER_TYPES", "THROWS_TYPES", "ID", "FRAGMENT_SEARCH_POLICY", "CHILD_SEARCH_POLICY", 
		"DUPLICATE_POLICY", "SUPERCLASS_TYPE", "INTERFACE_TYPES", "RESTART_AT_HOME", 
		"RESTART_AT_END_LAST_MATCH", "EXPRESSION", "STATEMENT", "STATIC_MODIFIER", 
		"FINAL_MODIFIER", "ABSTRACT_MODIFIER", "NESTED_CLASS", "NATIVE_MODIFIER", 
		"SYNCHRONIZED_MODIFIER", "HALT_ON_DUPLICATE", "SEARCH_NEXT_UNIQUE", "CYCLE_CHILDREN", 
		"CODE_BLOCK", "BINDING_REF", "WS", "COMMENT", "LINE_COMMENT", "BOOL_LITERAL", 
		"IDENTIFIER", "INT_LITERAL", "DECIMAL_LITERAL", "STRING_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode WHEN() { return getToken(PQLParser.WHEN, 0); }
		public RootFragmentContext rootFragment() {
			return getRuleContext(RootFragmentContext.class,0);
		}
		public TerminalNode THEN() { return getToken(PQLParser.THEN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(WHEN);
			setState(171);
			match(T__0);
			setState(172);
			rootFragment();
			setState(173);
			match(T__1);
			setState(174);
			match(THEN);
			setState(175);
			match(T__0);
			setState(176);
			commands();
			setState(177);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootFragmentContext extends ParserRuleContext {
		public TerminalNode FRAGMENT() { return getToken(PQLParser.FRAGMENT, 0); }
		public RootFragmentOptionsContext rootFragmentOptions() {
			return getRuleContext(RootFragmentOptionsContext.class,0);
		}
		public CodeOrFragmentPatternsContext codeOrFragmentPatterns() {
			return getRuleContext(CodeOrFragmentPatternsContext.class,0);
		}
		public RootFragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootFragment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterRootFragment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitRootFragment(this);
		}
	}

	public final RootFragmentContext rootFragment() throws RecognitionException {
		RootFragmentContext _localctx = new RootFragmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rootFragment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(FRAGMENT);
			setState(180);
			rootFragmentOptions();
			setState(181);
			match(T__0);
			setState(182);
			codeOrFragmentPatterns();
			setState(183);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeOrFragmentPatternsContext extends ParserRuleContext {
		public List<FragmentPatternContext> fragmentPattern() {
			return getRuleContexts(FragmentPatternContext.class);
		}
		public FragmentPatternContext fragmentPattern(int i) {
			return getRuleContext(FragmentPatternContext.class,i);
		}
		public List<CodePatternContext> codePattern() {
			return getRuleContexts(CodePatternContext.class);
		}
		public CodePatternContext codePattern(int i) {
			return getRuleContext(CodePatternContext.class,i);
		}
		public CodeOrFragmentPatternsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeOrFragmentPatterns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterCodeOrFragmentPatterns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitCodeOrFragmentPatterns(this);
		}
	}

	public final CodeOrFragmentPatternsContext codeOrFragmentPatterns() throws RecognitionException {
		CodeOrFragmentPatternsContext _localctx = new CodeOrFragmentPatternsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_codeOrFragmentPatterns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(187);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FRAGMENT:
					{
					setState(185);
					fragmentPattern();
					}
					break;
				case REFERENCE_SEARCH:
				case METHOD_INVOCATION:
				case METHOD_DECLARATION:
				case CLASS_DECLARATION:
					{
					setState(186);
					codePattern();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(189); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FRAGMENT) | (1L << REFERENCE_SEARCH) | (1L << METHOD_INVOCATION) | (1L << METHOD_DECLARATION) | (1L << CLASS_DECLARATION))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FragmentPatternContext extends ParserRuleContext {
		public TerminalNode FRAGMENT() { return getToken(PQLParser.FRAGMENT, 0); }
		public FragmentOptionsContext fragmentOptions() {
			return getRuleContext(FragmentOptionsContext.class,0);
		}
		public CodeOrFragmentPatternsContext codeOrFragmentPatterns() {
			return getRuleContext(CodeOrFragmentPatternsContext.class,0);
		}
		public FragmentPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fragmentPattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterFragmentPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitFragmentPattern(this);
		}
	}

	public final FragmentPatternContext fragmentPattern() throws RecognitionException {
		FragmentPatternContext _localctx = new FragmentPatternContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fragmentPattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(FRAGMENT);
			setState(192);
			fragmentOptions();
			setState(193);
			match(T__0);
			setState(194);
			codeOrFragmentPatterns();
			setState(195);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
